# habits_course_work_5

./: .env.sample  .flake8  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
