[tool.poetry]
name = "habits-course-work-5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-cors-headers = "^4.6.0"
rest-framework-simplejwt = "^0.0.2"
django-celery-beat = "^2.7.0"
celery = "^5.4.0"
requests = "^2.32.3"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
